[PRMP-1446] - Fix overflow issue on upload-complete confirmation page

--- a/app/src/styles/App.scss
+++ b/app/src/styles/App.scss
@@ -524,6 +524,8 @@ $hunit: '%';
                 font-weight: 400;
                 font-size: 1.5rem !important;
                 white-space: pre-wrap;
+                word-break: break-word;
+                overflow-wrap: break-word;
 
                 &_header {
                     font-weight: 700;
